fix z-index issue on emoji

--- a/assets/css/keenwcchat-style.css
+++ b/assets/css/keenwcchat-style.css
@@ -150,3 +150,7 @@
     outline: 0;
 }
 
+.emojionepicker-picker {
+    z-index: inherit !important;
+}
+
